# agentic-scraper

./: .gitignore  Dockerfile  Dockerfile.backend  Dockerfile.frontend  Makefile  README.md  docker-compose.yml  mock_api.py  pyproject.toml  remove_bom.py  requirements.txt  run.py  run_api.py  run_backend.py  run_batch.py  run_experiments.py  run_frontend.py  sample.env
.github/workflows/: badge-refresh.yml  check-requirements.yml  docker-build-backend.yml  docker-build-frontend.yml  tests.yml
.streamlit/: config.toml
docs/: agents.md  authentication.md
input/: urls1.txt  urls2.txt
output/experiment/: results.json  summary.csv  urls1_f1_l1.json
src/agentic_scraper/: __init__.py  debug_pyd.py
src/agentic_scraper/backend/: validators.py
src/agentic_scraper/backend/api/: lifecycle.py  main.py  models.py  openapi.py  user_store.py
src/agentic_scraper/backend/api/auth/: auth0_helpers.py  dependencies.py  scope_helpers.py  userinfo_helpers.py
src/agentic_scraper/backend/api/routes/: auth.py  scrape.py  scrape_cancel_registry.py  scrape_helpers.py  user.py
src/agentic_scraper/backend/api/routes/v1/: auth.py  oauth_redirect.py  scrape.py  user.py
src/agentic_scraper/backend/api/schemas/: items.py  scrape.py  user.py
src/agentic_scraper/backend/api/stores/: job_store.py  user_store.py
src/agentic_scraper/backend/api/utils/: log_helpers.py  serializer.py
src/agentic_scraper/backend/config/: aliases.py  constants.py  messages.py  types.py
src/agentic_scraper/backend/core/: logger_helpers.py  logger_setup.py  parallel.py  settings.py  settings_helpers.py
src/agentic_scraper/backend/scraper/: agent.py  cancel_helpers.py  fetcher.py  models.py  parser.py  pipeline.py  schemas.py  screenshotter.py  worker_pool.py  worker_pool_helpers.py
src/agentic_scraper/backend/scraper/agent/: __init__.py  agent_helpers.py  field_utils.py  llm_adaptive.py  llm_dynamic.py  llm_dynamic_adaptive.py  llm_fixed.py  prompt_helpers.py  rule_based.py
src/agentic_scraper/backend/scraper/agents/: __init__.py  agent_helpers.py  agent_parser.py  field_utils.py  llm_dynamic.py  llm_dynamic_adaptive.py  llm_fixed.py  prompt_helpers.py  rule_based.py
src/agentic_scraper/backend/utils/: crypto.py  validators.py
src/agentic_scraper/config/: aliases.py  constants.py  models.py
src/agentic_scraper/core/: logger_helpers.py  logger_setup.py  settings.py  settings_helpers.py
src/agentic_scraper/frontend/: app.py  app_helpers.py  auth_redirect.html  models.py  ui_auth.py  ui_auth_credentials.py  ui_auth_helpers.py  ui_auth_redirect.py  ui_core.py  ui_display.py  ui_effects.py  ui_jobs.py  ui_page_config.py  ui_runner.py  ui_runner_helpers.py  ui_sidebar.py
src/agentic_scraper/utils/: crypto.py  validators.py
tests/: conftest.py
tests/backend/api/: test_lifecycle.py  test_main.py  test_openapi.py  test_schemas_and_models.py
tests/backend/api/auth/: test_auth0_helpers.py  test_dependencies.py  test_scope_helpers.py
tests/backend/api/routes/: test_auth.py  test_scrape.py  test_scrape_cancel_registry.py  test_scrape_helpers.py  test_user.py
tests/backend/api/stores/: test_job_store.py  test_user_store.py
tests/backend/api/utils/: test_log_helpers.py
tests/backend/core/: test_logger_helpers.py  test_logger_setup.py  test_settings.py  test_settings_helpers.py
tests/backend/scraper/: test_fetcher.py  test_models.py  test_parser.py  test_pipeline.py  test_screenshotter.py  test_worker_pool.py  test_worker_pool_helpers.py
tests/backend/scraper/agents/: test_agent_helpers.py  test_agents_dispatch.py  test_field_utils.py  test_llm_dynamic.py  test_llm_dynamic_adaptive.py  test_llm_fixed.py  test_prompt_helpers.py  test_rule_based.py
tests/backend/stores/: test_job_store.py
tests/backend/utils/: test_crypto.py  test_validators.py
tests/frontend/: test_app.py  test_app_helpers.py  test_models.py  test_ui_auth.py  test_ui_auth_credentials.py  test_ui_auth_helpers.py  test_ui_display.py  test_ui_jobs.py  test_ui_page_config.py  test_ui_runner.py  test_ui_runner_helpers.py  test_ui_sidebar.py
tests/manual/: screenshotter_test.py  validators_test.py
